finish left part and start right part of the desing

--- a/login.html
+++ b/login.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="css/all.min.css">
+        <link rel="stylesheet" href="css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
         <link rel="stylesheet" href="login.css">
         <title>Login page</title>
     </head>
@@ -11,6 +14,7 @@
                 <img src="./Group 6.png">
             </div>
             <img class="img2" src="./Group 2.png">
+            <img class="img3" src="./Group 1.png">
             <div class="circle3"></div>
             <div class="circle">
                 <img src="./Group 4.png">
@@ -21,7 +25,36 @@
                 <h5>Start for free and get attractive offers from the community</h5>
             </div>
             </div>
-            <div class="circle2"></div>
+            <div class="container2">
+                <img src="./Group 1686550876.png">
+                <h1 class="heading">Login to your Account</h1>
+                <p>see what is going on with your business</p>
+                <div class="Continue">
+                    <img src="./image 2.png">
+                    <p>Continue with Google</p>
+                </div>
+                <div class="or">
+                    <p>-------------- or Sign in with Email --------------</p>
+                </div>
+                <div class="email-form">
+                    <div class="input">
+                        <label>Email</label>
+                        <input type="text">
+                    </div>
+                    <div class="input">
+                        <label>Password</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <div>
+                            <input type="checkbox">
+                            <p>Remeber me</p>
+                        </div>
+                        <p>Forgot Password?</p>
+                    </div>
+                    <input type = "submit" value="Login">   
+                </div>
+            </div>
         </div>
     </body>
 </html>
