add the form to fill data

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                     <p>Continue with Google</p>
                 </div>
                 <div class="or">
-                    <p>-------------- or Sign in with Email --------------</p>
+                    <p>----------- or Sign in with Email -----------</p>
                 </div>
                 <div class="email-form">
                     <div class="input">
@@ -45,9 +45,9 @@
                         <label>Password</label>
                         <input type="text">
                     </div>
-                    <div>
-                        <div>
-                            <input type="checkbox">
+                    <div class="Forgot">
+                        <div class="check">
+                            <input type="checkbox" checked="checked">
                             <p>Remeber me</p>
                         </div>
                         <p>Forgot Password?</p>
