change the design to fullfill the screen

--- a/login.html
+++ b/login.html
@@ -52,7 +52,11 @@
                         </div>
                         <p>Forgot Password?</p>
                     </div>
-                    <input type = "submit" value="Login">   
+                    <input type = "submit" value="Login"> 
+                    <div class="account">
+                        <p>Not Registed yet?</p>
+                        <a href="#">Create an account</a>
+                    </div>  
                 </div>
             </div>
         </div>
