add the design to the checkbox

--- a/login.html
+++ b/login.html
@@ -39,11 +39,11 @@
                 <div class="email-form">
                     <div class="input">
                         <label>Email</label>
-                        <input type="text">
+                        <input type="text" placeholder="mail@abc.com">
                     </div>
                     <div class="input">
                         <label>Password</label>
-                        <input type="text">
+                        <input type="text" placeholder="*************">
                     </div>
                     <div class="Forgot">
                         <div class="check">
